corrected most of last night's CSS mistakes. header still has top gap

--- a/public/style.css
+++ b/public/style.css
@@ -4,6 +4,8 @@ body {
   color: pink;
   background-color: black;
   /* margin-top: -10px; */
+  width: 100vw;
+  height: 100vh;
 }
 
 /* HEADER */
@@ -79,7 +81,7 @@ footer img {
 
 /* HOME */
 #logo-background {
-  margin: -10px;
+  width: 100vw;
   margin-bottom: -20px;
   background-image: url("https://i.imgur.com/5crjtOr.png");
   background-attachment: fixed;
@@ -111,7 +113,7 @@ footer img {
 .intro {
   height: 600px;
   /* margin-top: -20px; */
-  margin: -10px;
+  width: 100vw;
   background-image: url("https://i.imgur.com/w3EpdHZ.png");
   /* background-attachment: fixed; */
   background-repeat: no-repeat;
@@ -141,8 +143,7 @@ footer img {
 #vehicles-return {
   color: black;
   background-color: pink;
-  margin-left: -10px;
-  margin-right: -10px;
+  width: 100vw;
   padding-top: 100px;
   padding-bottom: 100px;
   /* height: 500px; */
@@ -186,8 +187,10 @@ footer img {
 
 .about-return {
 
-  margin: -10px;
-  margin-bottom: -20px;
+  width: 100vw;
+  height: 500px; 
+  padding-top: 100px;
+
   background-image: url("https://i.imgur.com/gGJSKOJ.png");
   background-attachment: fixed;
   background-repeat: no-repeat;
@@ -196,14 +199,13 @@ footer img {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  padding: 250px;
-  padding: 250px;
 }
 
 
 #about-container {
   color: black;
   background-color: white;
+  border-radius: 5px;
   max-width: 500px;
   margin: auto;
   padding: 20px;
@@ -222,11 +224,12 @@ footer img {
   /* margin-top: 30px; */
   margin-bottom: 30px;
   padding-top: 50px;
-  
+
 }
 
 .review-container {
   background-color: white;
+  border-radius: 5px;
   max-width: 500px;
   margin: auto;
   margin-top: 30px;
@@ -250,10 +253,13 @@ footer img {
 
 .review-name {
   font-size: x-large;
+  padding-left: 20px;
+  
 }
 
 .review-content{
   color: gray;
+  padding-left: 20px;
 }
 
 /* CONTACT */
@@ -262,8 +268,7 @@ footer img {
   justify-content: center;
   flex-direction: column;
   background-color: black;
-  margin-left: -10px;
-  margin-right: -10px;
+  width: 100vw;
   padding-top: 40px;
   padding-bottom: 80px;
 }
@@ -324,7 +329,7 @@ footer img {
   background-color: white;
   max-width: 500px;
   margin: auto;
-
+  border-radius: 5px;
   padding: 20px;
   text-align: center;
   font-family: Arial, Helvetica, sans-serif;
